tests/snapshots/examples_fixtures/imports__import_script_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/imports/import_script_error.flx
== compile ==
failed (module)
== diagnostics ==
--> compiler error[E018]: IMPORT NOT FOUND

Cannot find module `Errors.ScriptOnly` to import.

  --> examples/imports/import_script_error.flx:1:1
  |
1 | import Errors.ScriptOnly
  | ^

Hint:
  Check that: 1) The module file exists (e.g., `Errors.ScriptOnly.flx`), 2) The file is in a module root directory (current dir or ./src by default), 3) The module path matches the file structure (e.g., `Foo.Bar` → `Foo/Bar.flx`). Use `--root` flag to add more search paths.
  Looked for module `Errors.ScriptOnly` under roots: examples/imports, src (imported from examples/imports/import_script_error.flx).
== stdout ==
<not executed>
